finalizada (por el momento) la navbar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing-Page</title>
+    <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <a href="#">Christian Fey</a>
+        <small>Desarrollador Web</small>
+      </div>
+      <nav class="navbar">
+        <a href="#">Inicio</a>
+        <a href="#">Sobre Mí</a>
+        <a href="#">Proyectos</a>
+        <a href="#">Contacto</a>
+      </nav>
+    </header>
+  </body>
 </html>
