haciendo cambios al header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <header class="header">
       <div class="logo">
         <a href="#">Christian Fey</a>
-        <small>Desarrollador Web</small>
+        <small>Corredor Inmobiliario</small>
       </div>
       <nav class="navbar">
         <a href="#">Inicio</a>
         <a href="#">Sobre Mí</a>
-        <a href="#">Proyectos</a>
+        <a href="#">Propiedades</a>
         <a href="#">Contacto</a>
       </nav>
     </header>
