se agrego imagen en la seccion servicio y se corrigieron errores

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
           soluciones innovadoras que
           <span>impacten positivamente en tu negocio.</span>
         </p>
+        <img
+          src="./assets/service-image.png"
+          alt="ilustracion de una persona sentada en un escritorio con una computadora"
+        />
       </section>
     </main>
   </body>
