corrigiendo errrores ortograficos

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
       <section id="home" class="hero">
         <div class="hero-info">
-          <h1>Te ayudo a crea el sitio web perfecto para tu negocio.</h1>
+          <h1>Te ayudo a crear el sitio web perfecto para tu negocio.</h1>
           <p>
             Desarrollo sitios y aplicaciones para plataformas Web. Te ayudo a
             construir tu proyecto de principio a fin.
@@ -44,7 +44,7 @@
         <img src="./assets/hero-image.png" alt="Imagen principal del sitio." />
       </section>
       <section id="service" class="servicios">
-        <h2>¿Qué te Ofrezco?</h2>
+        <h2>¿Qué te ofrezco?</h2>
         <p>
           ¡Hola! Soy Christian Fey, soy un desarrollador web apasionado por
           crear sitios web y aplicaciones web que
