intercambiando colores del texto y titulos

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h2>¿Qué te ofrezco?</h2>
         <p>
           ¡Hola! Soy Christian Fey, soy un desarrollador web apasionado por
-          crear sitios web y aplicaciones web que
+          crear sitios y aplicaciones web que
           <span>te ayuden a alcanzar tus objetivos de negocio.</span> Al
           elegirme, obtendrás +3 años de experiencia, un compromiso con la
           calidad y la satisfacción del cliente, y la pasión por crear
