--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing-Page</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <title>Christian Fey Web</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -18,8 +36,12 @@
         <small>Desarrollador FullStack</small>
       </a>
       <nav class="navbar">
-        <label for="toggle-menu"><i class="fa-solid fa-bars"></i></label>
         <input type="checkbox" id="toggle-menu" />
+        <label for="toggle-menu" class="bars-menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
         <ul class="navbar-list">
           <li><a href="#home">Inicio</a></li>
           <li><a href="#service">Servicios</a></li>
