--- a/index.html
+++ b/index.html
@@ -270,9 +270,46 @@
           </article>
         </div>
       </section>
-      <section class="contacto">
+      <section id="contact" class="contacto">
         <h2>Contacto</h2>
+        <div class="info-contacto">
+          <div class="ubi-redes">
+            <div class="ubicacion">
+              <h3>Ubicación :</h3>
+              <p>Buenos Aires, Argentina</p>
+            </div>
+            <div class="redes">
+              <h3>Seguime en las redes :</h3>
+              <div class="link-redes">
+                <a href="" target="_blank"
+                  ><i class="fa-brands fa-instagram"></i
+                ></a>
+                <a href="" target="_blank"
+                  ><i class="fa-brands fa-facebook"></i
+                ></a>
+                <a href="" target="_blank"
+                  ><i class="fa-brands fa-twitter"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+          <div class="formulario">
+            <h3>Formulario de contacto</h3>
+            <form>
+              <input type="text" placeholder="ingrese su nombre" required />
+              <input type="email" placeholder="ingrese su email" required />
+              <textarea
+                placeholder="escribí tu duda o consulta"
+                required
+              ></textarea>
+              <input type="submit" value="Enviar" />
+            </form>
+          </div>
+        </div>
       </section>
     </main>
+    <footer>
+      <p>Sitio creado por Christian Fey 2024</p>
+    </footer>
   </body>
 </html>
